--- a/border_basic.html
+++ b/border_basic.html
@@ -11,6 +11,7 @@
             border-width:thick;
             border-style:dashed;
             border-color:black;
+            border-radius:20px;
         }
     </style>
 </head>
