--- a/condition_getData().html
+++ b/condition_getData().html
@@ -9,11 +9,19 @@
         var date = new Date();
         var hours = date.getHours();
         
-        if(hours >= 12){
-            alert('오후입니다.');
+        if(hours<5){
+            alert('잠자야지..');
+        }
+        else if(hours < 7){
+            alert('기상준비');
         }
         else{
-            alert('오전입니다.');
+            if(hours<9){
+                alert('출근');
+            }
+            else {
+                alert('퇴근');
+            }
         }
     </script>
 </head>
