--- a/attribute.html
+++ b/attribute.html
@@ -8,10 +8,12 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script>
         $(document).ready(function(){
-            $('img').attr('src', 'orange.jpeg');
-            $('img').attr('alt', '이미지가 없습니다.');
-            $('img').attr('width', 100);
-            $('img').attr('height', 100);
+            $('img').attr({
+                alt:'이미지가 없음',
+                src:'orange.jpeg',
+                width:100,
+                height:100
+            })
         });
     </script>
 </head>
