JQuery css 스타일 조정하기(class 사용)

--- a/jquery_cssStyle.html
+++ b/jquery_cssStyle.html
@@ -8,18 +8,18 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script>
         $(document).ready(function(){
-            $('div').css('background-color', 'red');
-            $('div').css('width', 100);
-            $('div').css('height', 100);
-            $('div').css('margin', 10);
-            $('div').css('float', 'left');
+            $('.box').css('background-color', 'red');
+            $('.box').css('width', 100);
+            $('.box').css('height', 100);
+            $('.box').css('margin', 10);
+            $('.box').css('float', 'left');
         })
     </script>
 </head>
 <body>
-    <div></div>
-    <div></div> 
-    <div></div> 
+    <div class = "box"></div>
+    <div class = "box"></div> 
+    <div class = "box"></div> 
 
 </body>
 </html>
